@@ -4,6 +4,11 @@ This is the first release of NUnitLite under the MIT license.
 
 New Features and Enhancements
 
+* New Asserts
+          Pass
+          Ignore
+          Inconclusive
+
 * New Constraints:
 
 * New Syntax Helpers:
